--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@paralleldrive/cuid2": "^3.0.4",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@react-pdf/renderer": "^4.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
