PART 7 Slice 7: Cron job optimization - per-source scheduling

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,27 @@
 {
   "crons": [
     {
-      "path": "/api/cron/ingest-jobs",
+      "path": "/api/cron/ingest?source=adzuna",
+      "schedule": "0 */4 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=jooble",
+      "schedule": "0 1,7,13,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=careerjet",
+      "schedule": "0 2,10,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=usajobs",
+      "schedule": "0 6 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=greenhouse",
+      "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=lever",
       "schedule": "0 */6 * * *"
     },
     {
@@ -11,10 +31,6 @@
     {
       "path": "/api/cron/expiry-warnings",
       "schedule": "0 9 * * *"
-    },
-    {
-      "path": "/api/cron/cleanup-expired",
-      "schedule": "0 2 * * *"
     }
   ]
 }
