--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
       "schedule": "0 2,10,18 * * *"
     },
     {
+      "path": "/api/cron/freshness-decay",
+      "schedule": "0 3 * * *"
+    },
+    {
       "path": "/api/cron/ingest?source=usajobs",
       "schedule": "0 6 * * *"
     },
