--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "CommonJS",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
