--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
     {
       "path": "/api/cron/expiry-warnings",
       "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/cron/cleanup-descriptions",
+      "schedule": "0 2 * * *"
     }
   ]
 }
