--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "clean": "rimraf .next out dist",
+    "validate": "npm run type-check && npm run lint",
     "postinstall": "prisma generate",
     "audit:jobs": "ts-node --project scripts/tsconfig.json scripts/audit-and-fix-jobs.ts",
     "audit:salaries": "ts-node --project scripts/tsconfig.json scripts/audit-salaries.ts",
