fix: correct regex pattern in vercel.json headers

--- a/vercel.json
+++ b/vercel.json
@@ -40,7 +40,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(png|jpg|jpeg|gif|webp|svg|ico|avif))",
+      "source": "/:path*\\.(png|jpg|jpeg|gif|webp|svg|ico|avif)",
       "headers": [
         {
           "key": "Cache-Control",
