--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@supabase/supabase-js": "^2.88.0",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.36.0",
+    "@vercel/og": "^0.8.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
