--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@react-pdf/renderer": "^4.3.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.88.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.36.0",
     "@vercel/og": "^0.8.6",
@@ -43,8 +44,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.555.0",
     "next": "^16.0.10",
+    "next-mdx-remote": "^5.0.0",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
