--- a/vercel.json
+++ b/vercel.json
@@ -2,31 +2,31 @@
   "crons": [
     {
       "path": "/api/cron/ingest?source=adzuna",
-      "schedule": "0 0,6,12,18 * * *"
+      "schedule": "0 2,14 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jooble",
-      "schedule": "0 12 * * *"
-    },
-    {
-      "path": "/api/cron/freshness-decay",
       "schedule": "0 3 * * *"
     },
     {
+      "path": "/api/cron/freshness-decay",
+      "schedule": "0 14 * * *"
+    },
+    {
       "path": "/api/cron/ingest?source=greenhouse",
-      "schedule": "0 4,13,19 * * *"
+      "schedule": "0 4 * * *"
     },
     {
       "path": "/api/cron/ingest?source=usajobs",
-      "schedule": "0 7,16 * * *"
+      "schedule": "0 6 * * *"
     },
     {
       "path": "/api/cron/ingest?source=lever",
-      "schedule": "0 2,10,18 * * *"
+      "schedule": "0 5 * * *"
     },
     {
       "path": "/api/cron/send-alerts",
-      "schedule": "0 13 * * *"
+      "schedule": "0 15 * * *"
     },
     {
       "path": "/api/cron/expiry-warnings",
@@ -37,8 +37,32 @@
       "schedule": "0 2 * * *"
     },
     {
-      "path": "/api/cron/ingest?source=jsearch",
-      "schedule": "0 0,6,12,18 * * *"
+      "path": "/api/cron/ingest?source=jsearch&chunk=0",
+      "schedule": "0 7 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=jsearch&chunk=1",
+      "schedule": "0 8 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=jsearch&chunk=2",
+      "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=jsearch&chunk=3",
+      "schedule": "0 10 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=jsearch&chunk=4",
+      "schedule": "0 11 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=jsearch&chunk=5",
+      "schedule": "0 12 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=ashby",
+      "schedule": "0 13 * * *"
     }
   ],
   "headers": [
