--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,14 @@
       "schedule": "0 22 * * *"
     },
     {
+      "path": "/api/cron/check-dead-links",
+      "schedule": "0 4 * * 0"
+    },
+    {
+      "path": "/api/cron/cleanup-expired",
+      "schedule": "30 2 * * *"
+    },
+    {
       "path": "/api/cron/cleanup-descriptions",
       "schedule": "0 2 * * *"
     },
@@ -67,22 +75,6 @@
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=7",
       "schedule": "0 14 * * *"
-    },
-    {
-      "path": "/api/cron/ingest?source=jsearch&chunk=8",
-      "schedule": "0 15 * * *"
-    },
-    {
-      "path": "/api/cron/ingest?source=jsearch&chunk=9",
-      "schedule": "0 16 * * *"
-    },
-    {
-      "path": "/api/cron/ingest?source=jsearch&chunk=10",
-      "schedule": "0 17 * * *"
-    },
-    {
-      "path": "/api/cron/ingest?source=jsearch&chunk=11",
-      "schedule": "0 18 * * *"
     },
     {
       "path": "/api/cron/ingest?source=ashby",
