--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
     "resend": "^6.5.2",
+    "sanitize-html": "^2.17.0",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
@@ -66,6 +67,7 @@
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.16.0",
     "@types/sharp": "^0.31.1",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
