--- a/pmhnp-autofill-extension/package.json
+++ b/pmhnp-autofill-extension/package.json
@@ -22,10 +22,12 @@
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
         "cross-env": "^7.0.3",
+        "jsdom": "^28.0.0",
         "postcss": "^8.4.49",
         "sharp": "^0.34.5",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.7.0",
-        "vite": "^5.4.11"
+        "vite": "^5.4.11",
+        "vitest": "^4.0.18"
     }
 }
