--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.555.0",
     "next": "^16.0.10",
     "next-mdx-remote": "^6.0.0",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
