--- a/vercel.json
+++ b/vercel.json
@@ -119,6 +119,10 @@
     {
       "path": "/api/cron/cleanup-descriptions",
       "schedule": "30 2 * * *"
+    },
+    {
+      "path": "/api/cron/index-urls",
+      "schedule": "0 11 * * *"
     }
   ],
   "headers": [
