--- a/vercel.json
+++ b/vercel.json
@@ -6,95 +6,191 @@
     },
     {
       "path": "/api/cron/ingest?source=jooble",
-      "schedule": "15 4,16 * * *"
+      "schedule": "5 4,16 * * *"
     },
     {
       "path": "/api/cron/ingest?source=greenhouse&chunk=0",
-      "schedule": "30 4,16 * * *"
+      "schedule": "10 4,16 * * *"
     },
     {
       "path": "/api/cron/ingest?source=greenhouse&chunk=1",
-      "schedule": "45 4,16 * * *"
+      "schedule": "15 4,16 * * *"
     },
     {
       "path": "/api/cron/ingest?source=greenhouse&chunk=2",
-      "schedule": "0 5,17 * * *"
+      "schedule": "20 4,16 * * *"
     },
     {
       "path": "/api/cron/ingest?source=greenhouse&chunk=3",
-      "schedule": "15 5,17 * * *"
+      "schedule": "25 4,16 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=greenhouse&chunk=4",
+      "schedule": "30 4,16 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=greenhouse&chunk=5",
+      "schedule": "35 4,16 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=greenhouse&chunk=6",
+      "schedule": "40 4,16 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=greenhouse&chunk=7",
+      "schedule": "45 4,16 * * *"
     },
     {
       "path": "/api/cron/ingest?source=lever",
-      "schedule": "30 5,17 * * *"
+      "schedule": "50 4,16 * * *"
     },
     {
       "path": "/api/cron/ingest?source=usajobs",
-      "schedule": "45 5,17 * * *"
+      "schedule": "55 4,16 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=0",
-      "schedule": "0 6,18 * * *"
+      "schedule": "0 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=1",
-      "schedule": "15 6,18 * * *"
+      "schedule": "5 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=2",
-      "schedule": "30 6,18 * * *"
+      "schedule": "10 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=3",
-      "schedule": "45 6,18 * * *"
+      "schedule": "15 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=4",
-      "schedule": "0 7,19 * * *"
+      "schedule": "20 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=5",
-      "schedule": "15 7,19 * * *"
+      "schedule": "25 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=6",
-      "schedule": "30 7,19 * * *"
+      "schedule": "30 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=jsearch&chunk=7",
-      "schedule": "45 7,19 * * *"
+      "schedule": "35 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=ashby",
-      "schedule": "0 8,20 * * *"
+      "schedule": "40 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=workday&chunk=0",
-      "schedule": "15 8,20 * * *"
+      "schedule": "45 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=workday&chunk=1",
-      "schedule": "30 8,20 * * *"
+      "schedule": "50 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=workday&chunk=2",
-      "schedule": "45 8,20 * * *"
+      "schedule": "55 5,17 * * *"
     },
     {
       "path": "/api/cron/ingest?source=workday&chunk=3",
-      "schedule": "0 9,21 * * *"
+      "schedule": "0 6,18 * * *"
     },
     {
       "path": "/api/cron/ingest?source=workday&chunk=4",
-      "schedule": "15 9,21 * * *"
+      "schedule": "5 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=5",
+      "schedule": "10 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=6",
+      "schedule": "15 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=7",
+      "schedule": "20 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=8",
+      "schedule": "25 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=9",
+      "schedule": "30 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=10",
+      "schedule": "35 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=11",
+      "schedule": "40 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=12",
+      "schedule": "45 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=13",
+      "schedule": "50 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=14",
+      "schedule": "55 6,18 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=15",
+      "schedule": "0 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=16",
+      "schedule": "5 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=17",
+      "schedule": "10 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=18",
+      "schedule": "15 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=19",
+      "schedule": "20 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=20",
+      "schedule": "25 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=21",
+      "schedule": "30 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=22",
+      "schedule": "35 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=23",
+      "schedule": "40 7,19 * * *"
+    },
+    {
+      "path": "/api/cron/ingest?source=workday&chunk=24",
+      "schedule": "45 7,19 * * *"
     },
     {
       "path": "/api/cron/ingest?source=ats-jobs-db",
-      "schedule": "30 9,21 * * *"
+      "schedule": "50 7,19 * * *"
     },
     {
       "path": "/api/cron/ingest?source=bamboohr",
-      "schedule": "45 9,21 * * *"
+      "schedule": "55 7,19 * * *"
     },
     {
       "path": "/api/cron/freshness-decay",
